[gd_scene load_steps=8 format=3 uid="uid://db68dosdln51t"]

[ext_resource type="Script" uid="uid://dj56c442d6b1u" path="res://scripts/tilemaplayer.gd" id="1_2ottj"]
[ext_resource type="Script" uid="uid://bsbr5u8usujh8" path="res://scripts/dungeonmaker.gd" id="1_g6ugy"]
[ext_resource type="Texture2D" uid="uid://wiak7l500vxs" path="res://assets/Dungeon_Tileset.png" id="2_1aoc5"]
[ext_resource type="Script" uid="uid://cd1h1ssti8sep" path="res://scripts/gridoverlay.gd" id="3_1aoc5"]
[ext_resource type="Script" uid="uid://bdhpyi5mjye7i" path="res://scripts/hoveroverlay.gd" id="5_8y36s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2ottj"]
texture = ExtResource("2_1aoc5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_1aoc5"]
sources/0 = SubResource("TileSetAtlasSource_2ottj")

[node name="DungeonMaker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6ugy")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftArea" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LeftArea"]
layout_mode = 2
size_flags_vertical = 3

[node name="Palette" type="GridContainer" parent="HSplitContainer/LeftArea/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="ButtonUndo" type="Button" parent="HSplitContainer/LeftArea"]
layout_mode = 2
text = "Deshacer"

[node name="ButtonClear" type="Button" parent="HSplitContainer/LeftArea"]
layout_mode = 2
text = "Borrar Mapa"

[node name="ButtonSave" type="Button" parent="HSplitContainer/LeftArea"]
layout_mode = 2
text = "Guardar Mapa"

[node name="MapArea" type="Control" parent="HSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TileMapLayer" type="TileMapLayer" parent="HSplitContainer/MapArea"]
tile_set = SubResource("TileSet_1aoc5")
rendering_quadrant_size = 20
script = ExtResource("1_2ottj")

[node name="GridOverlay" type="Node2D" parent="HSplitContainer/MapArea"]
script = ExtResource("3_1aoc5")

[node name="HoverOverlay" type="Node2D" parent="HSplitContainer/MapArea"]
script = ExtResource("5_8y36s")
